--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     </head>
     <body>
 
-        <h2>TADW Team 2022</h2>
+        <h2>TADW Teamwork</h2>
+        <p>Debajo los aportes de cada integrante del equipo</p>
 
         <div id="dev1"></div>
         <div id="dev2"></div>
